Fix bug scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 html,
 body {
@@ -10,10 +10,11 @@ body {
   padding: 0;
   color: white;
   background-color: #003049;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
-h1, h2 {
+h1,
+h2 {
   text-align: center;
 }
 
@@ -31,34 +32,31 @@ button {
 
 .section-canvas {
   display: flex;
-  column-gap: 3px;
   width: 100%;
   height: 100%;
+  column-gap: 3px;
 }
 
 .section-graph {
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: #D62828;
+  background-color: #d62828;
 }
 
 .section-cores {
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: #F77F00;
+  background-color: #f77f00;
 }
 
-#sigma-graph, #sigma-cores {
+#sigma-graph,
+#sigma-cores {
   height: 100%;
-  background-color: #E3E6E8;
+  background-color: #e3e6e8;
 }
 
-/* .section-graph {
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  width: 100%;
-  background-color: cadetblue;
+canvas {
+  position: fixed !important;
 }
